test/libsolidity/syntaxTests/literals/invalid_octal_denomination_no_whitespace.sol
contract C {
    uint y = 01gwei;
}
// ----
// ParserError 8936: (26-27): Octal numbers not allowed.
